Ensuring compatibility with Java 8.